# pasteit-rust

./: README.md  Readme.md
client/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
client/src/: App.tsx  index.css  main.tsx
client/src/components/: Footer.tsx  Header.tsx  Hero.tsx  MoonIcon.tsx  Steps.tsx  SunIcon.tsx  ThemeSwitcher.tsx
client/src/components/Form/: Snippet.tsx  Success.tsx
server/: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  Shuttle.toml  pastes.db
server-rust/: Cargo.toml  pastes.db
server-rust/src/: main.rs
server/src/: main.rs  sqlite3.exp  sqlite3.lib
