[package]
name = "pasteit"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
shuttle-actix-web = "0.31.0"
shuttle-runtime = "0.31.0"
tokio = "1.26.0"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
actix-cors = "0.6.4"
rusqlite = { version = "0.29.0", features = ["bundled"] }
actix-files = "0.6"
actix-rt = "2.2.0"
serde_json = "1.0"
