[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
rusqlite = { version = "0.29.0", features = ["bundled"] }
rand = "0.8"
actix-files = "0.6.2"
serde = { version = "1.0", features = ["derive"] }
actix-cors = "*"
serde_json = "1.0"
handlebars = { version = "4.3.6", features = ["dir_source"] }
tokio = "1.26.0"
