[package]
name = "server"
version = "0.1.0"
edition = "2021"
# default-run = "main"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
serde = { version = "1", features = ["derive"] }
actix-web = "4"
actix-rt = "2.2.0"
serde_json = "1.0"
rusqlite = { version = "0.29.0", features = ["bundled"] }
actix-files = "0.6"
actix-cors = "0.6.4"
sqlx = { version = "0.5", features = [
    "postgres",
    "runtime-actix-rustls",
    "macros",
] }
dotenv = "0.15"
